--- a/package.json
+++ b/package.json
@@ -29,10 +29,6 @@
   },
   "devDependencies": {
     "@ava/typescript": "^4.1.0",
-    "@noble/curves": "^1.2.0",
-    "@noble/secp256k1": "^2.0.0",
-    "@scure/bip32": "^1.3.2",
-    "@scure/bip39": "^1.2.1",
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "@typescript-eslint/parser": "^6.7.5",
     "ava": "^5.3.1",
@@ -41,20 +37,17 @@
     "commitizen": "^4.3.0",
     "cspell": "4.1.0",
     "cz-conventional-changelog": "^3.3.0",
-    "ed25519-keygen": "^0.4.8",
     "eslint": "^8.51.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-functional": "6.0.0",
     "eslint-plugin-import": "^2.22.0",
-    "hash-wasm": "^4.9.0",
     "npm-run-all": "^4.1.5",
     "open-cli": "^6.0.1",
     "prettier": "^3.0.3",
     "standard-version": "^9.5.0",
     "ts-node": "^9.0.0",
-    "typescript": "^5.2.2",
-    "viem": "^1.16.5"
+    "typescript": "^5.2.2"
   },
   "files": [
     "build/main",
@@ -88,17 +81,15 @@
   },
   "peerDependencies": {
     "@noble/curves": "^1.2.0",
-    "@noble/secp256k1": "^2.0.0",
     "@scure/bip32": "^1.3.2",
     "@scure/bip39": "^1.2.1",
     "ed25519-keygen": "^0.4.8",
     "hash-wasm": "^4.9.0",
-    "viem": "^1.14.0"
+    "viem": "^1.16.5"
   },
   "dependencies": {
     "aes-js": "^3.1.2",
     "bech32-buffer": "^0.2.1",
-    "bs58": "^5.0.0",
-    "elliptic": "^6.5.4"
+    "bs58": "^5.0.0"
   }
 }
